# hex

./: .gitignore  CMakeLists.txt  board.cpp  board.h  flask_hex.py  game.cpp  game.h  game_qt.cpp  game_qt.h  graph_uct.cpp  graph_uct.h  hashed.h  hex.cpp  hex_uct_ext.cpp  loop_uct.cpp  loop_uct.h  main.cpp  player.cpp  player.h  player_qt.cpp  player_qt.h  player_random.cpp  player_random.h  player_uct.cpp  player_uct.h  scene.cpp  scene.h  stress_uct.cpp  test_hex_uct.py  test_uct.cpp  unionfind.h  utils.cpp  utils.h  viewer.cpp  viewer.h
static/: style.css
templates/: base.html  displaygame.html  newgame.html  root.html
